--- a/css/reset.css
+++ b/css/reset.css
@@ -15,7 +15,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: #f5f5f5;
+  background-color: #d9d9d9;
 }
 
 img {
